moving from big-mouse to bigmouse

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "big-mouse-particles",
+  "name": "bigmouse-particles",
   "version": "0.0.1",
   "description": "A cheese plugin for Big Mouse",
   "author": "Zuri Pabon (@tsurshaddai)<zurisadai.pabon@gmail.com>",
